--- a/main.css
+++ b/main.css
@@ -4,15 +4,108 @@ body{
 }
 
 main{
-    display:grid;
-    grid-template-areas: "";
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+#pexeso{
+    position: absolute;
+    transform: translate(-50%, 0);
+    top: 10vh;
+    left: 50vw;
+    width: calc(6*110px);
 }
 
 .box{
+    position: absolute;
     width: 100px;
-    height: 100;
-
-    background-color: rgb(100,100,100);
+    height: 100px;
+    background-color: transparent;
     color: black;
+    font-size: 30px;
+    perspective: 1000px;
+
+    /*test purposes*/
+    /* color:transparent; */
 }
+
+.box > .box-inner{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: all ease-in-out 0.6s;
+    transform-style: preserve-3d;
+    background-color: green;
+    border:solid 2px black;
+    border-radius: 5px;
+}
+
+.box .box-front, .box .box-back{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden; /* Safari */
+    backface-visibility: hidden;
+}
+
+.box .box-back{
+    background-color: dodgerblue;
+    color: white;
+    transform: rotateY(180deg);
+}
+
+.box .box-front{
+    background-color: rgb(37, 37, 37);
+    color: white;
+    transform: rotateY(180deg);
+}
+
+/* .box:hover > .box-inner{
+    transform: rotateY(180deg);
+} */
+
+
+/*BOX POSITIONS*/
+#box1{position: absolute; top: 0; left: 0;}
+#box2{position: absolute; top: 0; left: 110px;}
+#box3{position: absolute; top: 0; left: 220px;}
+#box4{position: absolute; top: 0; left: 330px;}
+#box5{position: absolute; top: 0; left: 440px;}
+#box6{position: absolute; top: 0; left: 550px;}
+
+#box7{position: absolute; top: 110px; left: 0;}
+#box8{position: absolute; top: 110px; left: 110px;}
+#box9{position: absolute; top: 110px; left: 220px;}
+#box10{position: absolute; top: 110px; left: 330px;}
+#box11{position: absolute; top: 110px; left: 440px;}
+#box12{position: absolute; top: 110px; left: 550px;}
+
+#box13{position: absolute; top: 220px; left: 0;}
+#box14{position: absolute; top: 220px; left: 110px;}
+#box15{position: absolute; top: 220px; left: 220px;}
+#box16{position: absolute; top: 220px; left: 330px;}
+#box17{position: absolute; top: 220px; left: 440px;}
+#box18{position: absolute; top: 220px; left: 550px;}
+
+#box19{position: absolute; top: 330px; left: 0;}
+#box20{position: absolute; top: 330px; left: 110px;}
+#box21{position: absolute; top: 330px; left: 220px;}
+#box22{position: absolute; top: 330px; left: 330px;}
+#box23{position: absolute; top: 330px; left: 440px;}
+#box24{position: absolute; top: 330px; left: 550px;}
+
+#box25{position: absolute; top: 440px; left: 0;}
+#box26{position: absolute; top: 440px; left: 110px;}
+#box27{position: absolute; top: 440px; left: 220px;}
+#box28{position: absolute; top: 440px; left: 330px;}
+#box29{position: absolute; top: 440px; left: 440px;}
+#box30{position: absolute; top: 440px; left: 550px;}
+
+#box31{position: absolute; top: 550px; left: 0;}
+#box32{position: absolute; top: 550px; left: 110px;}
+#box33{position: absolute; top: 550px; left: 220px;}
+#box34{position: absolute; top: 550px; left: 330px;}
+#box35{position: absolute; top: 550px; left: 440px;}
+#box36{position: absolute; top: 550px; left: 550px;}
