--- a/main.css
+++ b/main.css
@@ -1,24 +1,37 @@
-body{
-    /* background-color: rgb(50, 50, 50); */
-    /* height: 100vh; */
-}
+@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300&family=Roboto&display=swap');
 
 main{
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    right: 0;
+    top: 0;
+    margin: 0;
+    padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image: url(./images/background.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    font-family: roboto;
 }
 
 #turn{
+    position: absolute;
+    transform: translate(-50%, 0);
+    top: 1vh;
+    left: 50vw;
     color: rgb(19, 102, 51);
-    font-size: 90px;
+    font-size: 110px;
     transition: all ease-in-out 0.3s;
 }
 
 #pexeso{
     position: absolute;
-    transform: translate(-50%, 0);
-    top: 10vh;
+    transform: translate(-49.4%, 0);
+    top: 15vh;
     left: 50vw;
     width: calc(6*110px);
 }
@@ -32,6 +45,51 @@ main{
     z-index: -1;
 }
 
+#endPopUp{
+    position: absolute;
+    transform: translate(-50%, -50%);
+    left: 50vw;
+    top: 40vh;
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 50px;
+    border:solid rgb(184, 184, 184) 2px;
+    border-radius: 10px;
+    z-index: 200;
+    font-size: 100px;
+    color:rgb(206, 206, 206);
+    animation: pulsingText infinite alternate 1s;
+    display: none;
+}
+
+@keyframes pulsingText {
+    0%{
+        transform: translate(-50%, -50%) scale(1);
+    }
+    100%{
+        transform: translate(-50%, -50%) scale(1.03);
+    }
+}
+
+#restartButton{
+    position: absolute;
+    transform: translate(-50%, -50%);
+    left: 50vw;
+    top: 65vh;
+    z-index: 200;
+    font-size: 100px;
+    background-color: rgba(122, 0, 0, 0.541);
+    padding: 7px 7px 0px 7px;
+    border:solid rgb(184, 184, 184) 2px;
+    border-radius: 10px;
+    transition: all ease-in-out 0.1s;
+    display: none;
+}
+
+#restartButton:hover{
+    transform: translate(-50%, -50%) scale(1.04);
+    background-color: rgba(122, 0, 0, 0.65);
+}
+
 .box{
     position: absolute;
     width: 100px;
@@ -40,8 +98,12 @@ main{
     color: black;
     font-size: 30px;
     perspective: 1000px;
-    z-index: 5;
-    
+    transition: transform ease-in-out 0.1s;
+    z-index: 5;    
+}
+
+.box:hover{
+    transform: scale(1.05);
 }
 
 .box > .box-inner{
@@ -49,27 +111,39 @@ main{
     width: 100%;
     height: 100%;
     text-align: center;
-    transition: all ease-in-out 0.6s;
+    transition: transform ease-in-out 0.6s;
     transform-style: preserve-3d;
-    background-color: rgb(53, 53, 53);
-    /* border:solid 2px black; */
+    background-image: linear-gradient(to bottom right, rgb(31, 31, 31), rgb(45,45,45),rgb(31, 31, 31));
     border-radius: 5px;
     animation: 3s;
+
+    /*question mark*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 40px;
+    color: rgb(32, 32, 32);
 }
+
 
 .box .box-front, .box .box-back{
     position: absolute;
     width: 100%;
     height: 100%;
+    top: 0;
     -webkit-backface-visibility: hidden; /* Safari */
     backface-visibility: hidden;
     border-radius: 5px;
 }
 
 .box .box-back{
-    background-color: rgb(150, 150, 150);
-    color: white;
+    background-color: rgb(63, 63, 63);
+    color: transparent;
+    user-select: none;
     transform: rotateY(180deg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 .box .box-front{
@@ -126,17 +200,41 @@ main{
     }
 }
 
-/*Player1*/
+/*======================== PLAYER STATS ==========================*/
+#player1, #player2{
+    padding: 100px;
+    border-radius: 20px;
+    text-align: center;
+    
+}
+
+#player1 > i, #player2 > i{
+    font-size: 100px;
+    margin:0;
+}
+
+#player1 > h2, #player2 > h2{
+    font-size: 80px;
+    margin: 0;
+}
+
 #player1{
     position: absolute;
     left: 200px;
     bottom: 200px;
+    background-color: rgba(13, 71, 35, 0.3);
 }
-/*Player2*/
+#player1 > i{
+    color:rgb(19, 102, 51);
+}
 #player2{
     position: absolute;
     right: 200px;
     bottom: 200px;
+    background-color: rgba(23, 49, 133, 0.3);
+}
+#player2 > i{
+    color:rgb(35, 73, 199);
 }
 
 /*BOX POSITIONS*/
