--- a/main.css
+++ b/main.css
@@ -1,5 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300&family=Roboto&display=swap');
 
+body{
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    right: 0;
+    overflow: hidden;
+    user-select: none;
+}
+
 main{
     position: absolute;
     width: 100vw;
@@ -26,6 +35,7 @@ main{
     color: rgb(19, 102, 51);
     font-size: 110px;
     transition: all ease-in-out 0.3s;
+    z-index: 100;
 }
 
 #pexeso{
@@ -34,6 +44,7 @@ main{
     top: 15vh;
     left: 50vw;
     width: calc(6*110px);
+    z-index: 100;
 }
 
 #overScreen{
@@ -54,11 +65,12 @@ main{
     padding: 50px;
     border:solid rgb(184, 184, 184) 2px;
     border-radius: 10px;
-    z-index: 200;
+    z-index: 901;
     font-size: 100px;
     color:rgb(206, 206, 206);
     animation: pulsingText infinite alternate 1s;
     display: none;
+    text-align: center;
 }
 
 @keyframes pulsingText {
@@ -75,7 +87,7 @@ main{
     transform: translate(-50%, -50%);
     left: 50vw;
     top: 65vh;
-    z-index: 200;
+    z-index: 901;
     font-size: 100px;
     background-color: rgba(122, 0, 0, 0.541);
     padding: 7px 7px 0px 7px;
@@ -99,7 +111,6 @@ main{
     font-size: 30px;
     perspective: 1000px;
     transition: transform ease-in-out 0.1s;
-    z-index: 5;    
 }
 
 .box:hover{
@@ -116,6 +127,8 @@ main{
     background-image: linear-gradient(to bottom right, rgb(31, 31, 31), rgb(45,45,45),rgb(31, 31, 31));
     border-radius: 5px;
     animation: 3s;
+    cursor: pointer;
+    z-index: 100;
 
     /*question mark*/
     display: flex;
@@ -156,7 +169,7 @@ main{
     25%{
 
         transform: scale(1.2) rotateY(180deg);
-        outline: solid rgb(19, 102, 51) 2px;
+        outline: solid rgb(19, 102, 51) 5px;
     }
 
     35%{
@@ -165,7 +178,7 @@ main{
     }
     55%{
         transform: scale(1.2) rotateY(180deg);
-        outline: solid rgb(19, 102, 51) 2px;
+        outline: solid rgb(19, 102, 51) 5px;
     }
     80%{
         transform: scale(1) rotateY(180deg);
@@ -178,19 +191,18 @@ main{
 
 @keyframes player2CardMatch{
     25%{
-
         transform: scale(1.2) rotateY(180deg);
-        outline: solid rgb(35, 73, 199) 2px;
+        outline: solid rgb(35, 73, 199) 5px;
     }
 
     35%{
         transform: scale(1) rotateY(180deg);
         outline: solid rgb(35, 73, 199) 5px;
-    }
+        }
     55%{
         transform: scale(1.2) rotateY(180deg);
-        outline: solid rgb(35, 73, 199) 2px;
-    }
+        outline: solid rgb(35, 73, 199) 5px;
+        }
     80%{
         transform: scale(1) rotateY(180deg);
         outline: solid rgb(35, 73, 199) 5px;
@@ -205,7 +217,7 @@ main{
     padding: 100px;
     border-radius: 20px;
     text-align: center;
-    
+    z-index: 100;
 }
 
 #player1 > i, #player2 > i{
@@ -220,7 +232,7 @@ main{
 
 #player1{
     position: absolute;
-    left: 200px;
+    left: 100px;
     bottom: 200px;
     background-color: rgba(13, 71, 35, 0.3);
 }
@@ -229,12 +241,29 @@ main{
 }
 #player2{
     position: absolute;
-    right: 200px;
+    right: 100px;
     bottom: 200px;
     background-color: rgba(23, 49, 133, 0.3);
 }
 #player2 > i{
     color:rgb(35, 73, 199);
+}
+
+#player1Score, #player2Score{
+    animation: 2s ease-in-out alternate;
+    -webkit-animation: 2s ease-in-out alternate;
+}
+
+@keyframes playerGainScore{
+    0%{
+        transform: scale(1);
+    }
+    50%{
+        transform: scale(1.8);
+    }
+    100%{
+        transform: scale(1);
+    }
 }
 
 /*BOX POSITIONS*/
